--- a/AquAnalyzerWebApp/Components/Pages/WaterDataDashboard.razor
+++ b/AquAnalyzerWebApp/Components/Pages/WaterDataDashboard.razor
@@ -1,5 +1,6 @@
 @page "/water-dashboard"
 @using AquAnalyzerAPI.Dtos;
+@using AquAnalyzerAPI.Services;
 @using AquAnalyzerWebApp.Interfaces
 @inject IWaterService WaterService
 @inject NavigationManager NavigationManager
@@ -23,6 +24,10 @@
                 <i class="fas fa-plus"></i> Add New Water Data
             </a>
         </div>
+    </div>
+
+    <div class="abnormality-section">
+        <AbnormalityDisplay />
     </div>
 
     <WaterMetricsSummary />
